--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -1,24 +1,31 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-07-13T15:55:28.014652Z",
-     "start_time": "2025-07-13T15:55:27.335676Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
+   "cell_type": "code",
    "source": "import pandas as pd",
+   "id": "initial_id",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "import mordred",
+   "id": "a152d918738dd233"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-13T15:55:28.030657Z",
-     "start_time": "2025-07-13T15:55:28.021658Z"
+     "end_time": "2025-07-13T16:33:15.054395Z",
+     "start_time": "2025-07-13T16:33:15.046392Z"
     }
    },
    "cell_type": "code",
@@ -33,8 +40,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-13T15:55:28.631191Z",
-     "start_time": "2025-07-13T15:55:28.350276Z"
+     "end_time": "2025-07-13T16:33:16.260503Z",
+     "start_time": "2025-07-13T16:33:15.706843Z"
     }
    },
    "cell_type": "code",
@@ -50,8 +57,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-13T15:55:28.709199Z",
-     "start_time": "2025-07-13T15:55:28.664197Z"
+     "end_time": "2025-07-13T16:33:16.855368Z",
+     "start_time": "2025-07-13T16:33:16.812788Z"
     }
    },
    "cell_type": "code",
@@ -277,8 +284,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-13T15:55:28.882193Z",
-     "start_time": "2025-07-13T15:55:28.853197Z"
+     "end_time": "2025-07-13T16:33:17.943837Z",
+     "start_time": "2025-07-13T16:33:17.912847Z"
     }
    },
    "cell_type": "code",
@@ -294,8 +301,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-13T15:55:29.483790Z",
-     "start_time": "2025-07-13T15:55:29.455792Z"
+     "end_time": "2025-07-13T16:33:18.885939Z",
+     "start_time": "2025-07-13T16:33:18.873959Z"
     }
    },
    "cell_type": "code",
@@ -390,23 +397,29 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-13T15:55:35.728199Z",
-     "start_time": "2025-07-13T15:55:29.865881Z"
+     "end_time": "2025-07-13T16:33:20.339583Z",
+     "start_time": "2025-07-13T16:33:19.781116Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from filter.filter_molecules import filter_molecules\n",
+    "from predictor.descriptor_computer import get_desc_dataset\n",
     "\n",
-    "df_filtered = filter_molecules(target_clean)"
+    "rdkit_desc = get_desc_dataset(target_id, \"rdkit\")\n",
+    "rdkit_desc.head()"
    ],
-   "id": "3b97f5bcaee983d4",
+   "id": "6f2f8f4ce8ed06a2",
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen importlib._bootstrap>:241: RuntimeWarning: to-Python converter for class boost::shared_ptr<class RDKit::FilterHierarchyMatcher> already registered; second conversion method ignored.\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mordred'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[7], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mpredictor\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mdescriptor_computer\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m get_desc_dataset\n\u001B[0;32m      3\u001B[0m rdkit_desc \u001B[38;5;241m=\u001B[39m get_desc_dataset(target_id, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mrdkit\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m      4\u001B[0m rdkit_desc\u001B[38;5;241m.\u001B[39mhead()\n",
+      "File \u001B[1;32mD:\\python_projects\\alzheimer-generative-design\\predictor\\descriptor_computer.py:4\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mtraceback\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mpandas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mpd\u001B[39;00m\n\u001B[1;32m----> 4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mmordred\u001B[39;00m\n\u001B[0;32m      5\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mmordred\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m Calculator, descriptors\n\u001B[0;32m      6\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mrdkit\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mChem\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m Descriptors\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'mordred'"
      ]
     }
    ],
@@ -415,63 +428,33 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-13T15:55:35.792205Z",
-     "start_time": "2025-07-13T15:55:35.778206Z"
+     "end_time": "2025-07-13T16:32:47.176273500Z",
+     "start_time": "2025-07-13T16:30:19.766277Z"
     }
    },
    "cell_type": "code",
-   "source": "df_filtered",
-   "id": "a9e7abc92c33588f",
+   "source": [
+    "from predictor.descriptor_computer import get_desc_dataset\n",
+    "\n",
+    "mordred_desc = get_desc_dataset(target_id, \"mordred\")\n",
+    "rdkit_desc.head()"
+   ],
+   "id": "e64d2815ffa023b8",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [molecule_chembl_id, smiles, ic50, tox_free, bbb, qed, sa, lip, carc]\n",
-       "Index: []"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>molecule_chembl_id</th>\n",
-       "      <th>smiles</th>\n",
-       "      <th>ic50</th>\n",
-       "      <th>tox_free</th>\n",
-       "      <th>bbb</th>\n",
-       "      <th>qed</th>\n",
-       "      <th>sa</th>\n",
-       "      <th>lip</th>\n",
-       "      <th>carc</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'mordred'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[11], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mpredictor\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mdescriptor_computer\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m get_desc_dataset\n\u001B[1;32m----> 3\u001B[0m mordred_desc \u001B[38;5;241m=\u001B[39m \u001B[43mget_desc_dataset\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtarget_id\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mmordred\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      4\u001B[0m rdkit_desc\u001B[38;5;241m.\u001B[39mhead()\n",
+      "File \u001B[1;32mD:\\python_projects\\alzheimer-generative-design\\predictor\\descriptor_computer.py:62\u001B[0m, in \u001B[0;36mget_desc_dataset\u001B[1;34m(target_id, desc_func_name)\u001B[0m\n\u001B[0;32m     59\u001B[0m dataset \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mDataFrame(dataset)\n\u001B[0;32m     60\u001B[0m dataset\u001B[38;5;241m.\u001B[39mset_index(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmolecule_chembl_id\u001B[39m\u001B[38;5;124m\"\u001B[39m, drop\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, inplace\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[1;32m---> 62\u001B[0m dataset\u001B[38;5;241m.\u001B[39mto_csv(path, index\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[0;32m     63\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m dataset\n",
+      "\u001B[1;31mKeyError\u001B[0m: 'mordred'"
+     ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -479,7 +462,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "6f2f8f4ce8ed06a2"
+   "id": "f9f33131186c962b"
   }
  ],
  "metadata": {
