--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -936,8 +936,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-13T16:38:30.085795Z",
-     "start_time": "2025-07-13T16:38:29.095200Z"
+     "end_time": "2025-07-13T16:42:54.019886Z",
+     "start_time": "2025-07-13T16:42:53.340530Z"
     }
    },
    "cell_type": "code",
@@ -946,8 +946,8 @@
     "from rdkit.Chem import rdFingerprintGenerator\n",
     "\n",
     "fp_gen = rdFingerprintGenerator.GetMorganGenerator(radius=2,fpSize=2048)\n",
-    "mordred_desc = get_fp_dataset(target_id, \"morgan\", fp_gen)\n",
-    "mordred_desc.head()"
+    "morgan_desc = get_fp_dataset(target_id, \"morgan\", fp_gen)\n",
+    "morgan_desc.head()"
    ],
    "id": "f9f33131186c962b",
    "outputs": [
@@ -1181,12 +1181,12 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 14
   },
   {
    "metadata": {},
