--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -659,8 +659,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-13T16:38:09.975215Z",
-     "start_time": "2025-07-13T16:37:07.114808Z"
+     "end_time": "2025-07-13T16:44:32.546014Z",
+     "start_time": "2025-07-13T16:43:54.546082Z"
     }
    },
    "cell_type": "code",
@@ -668,7 +668,7 @@
     "from predictor.descriptor_computer import get_desc_dataset\n",
     "\n",
     "mordred_desc = get_desc_dataset(target_id, \"mordred\")\n",
-    "rdkit_desc.head()"
+    "mordred_desc.head()"
    ],
    "id": "e64d2815ffa023b8",
    "outputs": [
@@ -691,47 +691,55 @@
        "CHEMBL109045           COc1cc(C(=O)c2c(O)cc(O)c(CC=C(C)C)c2O)c(O)cc1O   \n",
        "CHEMBL4464068                             CCCCCCCCCCOc1cc(C(=O)NO)on1   \n",
        "\n",
-       "                    standard_value  MaxAbsEStateIndex  MaxEStateIndex  \\\n",
+       "                    standard_value  \\\n",
+       "molecule_chembl_id                   \n",
+       "CHEMBL323197               14100.0   \n",
+       "CHEMBL4167681                890.0   \n",
+       "CHEMBL320658               14700.0   \n",
+       "CHEMBL109045               66000.0   \n",
+       "CHEMBL4464068                360.0   \n",
+       "\n",
+       "                                                                  ABC  \\\n",
        "molecule_chembl_id                                                      \n",
-       "CHEMBL323197               14100.0          13.480485       13.480485   \n",
-       "CHEMBL4167681                890.0          11.430997       11.430997   \n",
-       "CHEMBL320658               14700.0          12.945543       12.945543   \n",
-       "CHEMBL109045               66000.0          12.775670       12.775670   \n",
-       "CHEMBL4464068                360.0          10.999545       10.999545   \n",
+       "CHEMBL323197        module 'numpy' has no attribute 'float'.\\n`np....   \n",
+       "CHEMBL4167681       module 'numpy' has no attribute 'float'.\\n`np....   \n",
+       "CHEMBL320658        module 'numpy' has no attribute 'float'.\\n`np....   \n",
+       "CHEMBL109045        module 'numpy' has no attribute 'float'.\\n`np....   \n",
+       "CHEMBL4464068       module 'numpy' has no attribute 'float'.\\n`np....   \n",
        "\n",
-       "                    MinAbsEStateIndex  MinEStateIndex       qed        SPS  \\\n",
-       "molecule_chembl_id                                                           \n",
-       "CHEMBL323197                 0.010510       -0.446615  0.400171  10.966667   \n",
-       "CHEMBL4167681                0.332615       -0.565202  0.341103  10.391304   \n",
-       "CHEMBL320658                 0.001304       -0.881522  0.409566  10.423077   \n",
-       "CHEMBL109045                 0.061414       -0.894213  0.409566  10.423077   \n",
-       "CHEMBL4464068                0.070904       -0.736640  0.369750  10.500000   \n",
-       "\n",
-       "                      MolWt  HeavyAtomMolWt  ...  fr_sulfide  fr_sulfonamd  \\\n",
-       "molecule_chembl_id                           ...                             \n",
-       "CHEMBL323197        410.466         384.258  ...           0             0   \n",
-       "CHEMBL4167681       323.433         294.201  ...           0             0   \n",
-       "CHEMBL320658        360.362         340.202  ...           0             0   \n",
-       "CHEMBL109045        360.362         340.202  ...           0             0   \n",
-       "CHEMBL4464068       284.356         260.164  ...           0             0   \n",
-       "\n",
-       "                    fr_sulfone  fr_term_acetylene  fr_tetrazole  fr_thiazole  \\\n",
+       "                                                                ABCGG  nAcid  \\\n",
        "molecule_chembl_id                                                             \n",
-       "CHEMBL323197                 0                  0             0            0   \n",
-       "CHEMBL4167681                0                  0             0            0   \n",
-       "CHEMBL320658                 0                  0             0            0   \n",
-       "CHEMBL109045                 0                  0             0            0   \n",
-       "CHEMBL4464068                0                  0             0            0   \n",
+       "CHEMBL323197        module 'numpy' has no attribute 'float'.\\n`np....      0   \n",
+       "CHEMBL4167681       module 'numpy' has no attribute 'float'.\\n`np....      0   \n",
+       "CHEMBL320658        module 'numpy' has no attribute 'float'.\\n`np....      0   \n",
+       "CHEMBL109045        module 'numpy' has no attribute 'float'.\\n`np....      0   \n",
+       "CHEMBL4464068       module 'numpy' has no attribute 'float'.\\n`np....      0   \n",
        "\n",
-       "                    fr_thiocyan  fr_thiophene  fr_unbrch_alkane  fr_urea  \n",
-       "molecule_chembl_id                                                        \n",
-       "CHEMBL323197                  0             0                 0        0  \n",
-       "CHEMBL4167681                 0             0                 7        0  \n",
-       "CHEMBL320658                  0             0                 0        0  \n",
-       "CHEMBL109045                  0             0                 0        0  \n",
-       "CHEMBL4464068                 0             0                 7        0  \n",
+       "                    nBase    SpAbs_A   SpMax_A  SpDiam_A     SpAD_A  ...  \\\n",
+       "molecule_chembl_id                                                   ...   \n",
+       "CHEMBL323197            0  36.528864  2.561161  5.122323  36.528864  ...   \n",
+       "CHEMBL4167681           0  29.000548  2.338720  4.677440  29.000548  ...   \n",
+       "CHEMBL320658            0  30.785536  2.487191  4.974383  30.785536  ...   \n",
+       "CHEMBL109045            0  30.937441  2.472994  4.945989  30.937441  ...   \n",
+       "CHEMBL4464068           0  25.146120  2.304287  4.429917  25.146120  ...   \n",
        "\n",
-       "[5 rows x 219 columns]"
+       "                        SRW10     TSRW10          MW       AMW  WPath  WPol  \\\n",
+       "molecule_chembl_id                                                            \n",
+       "CHEMBL323197        10.510941  66.081527  410.172939  7.324517   2317    55   \n",
+       "CHEMBL4167681        9.490015  55.747981  323.209658  6.215570   1552    29   \n",
+       "CHEMBL320658        10.246190  61.037956  360.120903  7.828715   1541    45   \n",
+       "CHEMBL109045        10.229729  61.015219  360.120903  7.828715   1626    45   \n",
+       "CHEMBL4464068        9.136801  65.204580  284.173607  6.458491   1145    21   \n",
+       "\n",
+       "                    Zagreb1  Zagreb2   mZagreb1  mZagreb2  \n",
+       "molecule_chembl_id                                         \n",
+       "CHEMBL323197          158.0    190.0  12.444444  6.611111  \n",
+       "CHEMBL4167681         100.0    109.0   8.194444  5.722222  \n",
+       "CHEMBL320658          132.0    156.0  11.722222  5.805556  \n",
+       "CHEMBL109045          132.0    156.0  11.722222  5.805556  \n",
+       "CHEMBL4464068          86.0     92.0   6.833333  4.944444  \n",
+       "\n",
+       "[5 rows x 1828 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -754,25 +762,25 @@
        "      <th></th>\n",
        "      <th>smiles</th>\n",
        "      <th>standard_value</th>\n",
-       "      <th>MaxAbsEStateIndex</th>\n",
-       "      <th>MaxEStateIndex</th>\n",
-       "      <th>MinAbsEStateIndex</th>\n",
-       "      <th>MinEStateIndex</th>\n",
-       "      <th>qed</th>\n",
-       "      <th>SPS</th>\n",
-       "      <th>MolWt</th>\n",
-       "      <th>HeavyAtomMolWt</th>\n",
+       "      <th>ABC</th>\n",
+       "      <th>ABCGG</th>\n",
+       "      <th>nAcid</th>\n",
+       "      <th>nBase</th>\n",
+       "      <th>SpAbs_A</th>\n",
+       "      <th>SpMax_A</th>\n",
+       "      <th>SpDiam_A</th>\n",
+       "      <th>SpAD_A</th>\n",
        "      <th>...</th>\n",
-       "      <th>fr_sulfide</th>\n",
-       "      <th>fr_sulfonamd</th>\n",
-       "      <th>fr_sulfone</th>\n",
-       "      <th>fr_term_acetylene</th>\n",
-       "      <th>fr_tetrazole</th>\n",
-       "      <th>fr_thiazole</th>\n",
-       "      <th>fr_thiocyan</th>\n",
-       "      <th>fr_thiophene</th>\n",
-       "      <th>fr_unbrch_alkane</th>\n",
-       "      <th>fr_urea</th>\n",
+       "      <th>SRW10</th>\n",
+       "      <th>TSRW10</th>\n",
+       "      <th>MW</th>\n",
+       "      <th>AMW</th>\n",
+       "      <th>WPath</th>\n",
+       "      <th>WPol</th>\n",
+       "      <th>Zagreb1</th>\n",
+       "      <th>Zagreb2</th>\n",
+       "      <th>mZagreb1</th>\n",
+       "      <th>mZagreb2</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>molecule_chembl_id</th>\n",
@@ -804,134 +812,134 @@
        "      <th>CHEMBL323197</th>\n",
        "      <td>COc1c(O)cc2oc3cc(O)c(CC=C(C)C)c(O)c3c(=O)c2c1C...</td>\n",
        "      <td>14100.0</td>\n",
-       "      <td>13.480485</td>\n",
-       "      <td>13.480485</td>\n",
-       "      <td>0.010510</td>\n",
-       "      <td>-0.446615</td>\n",
-       "      <td>0.400171</td>\n",
-       "      <td>10.966667</td>\n",
-       "      <td>410.466</td>\n",
-       "      <td>384.258</td>\n",
+       "      <td>module 'numpy' has no attribute 'float'.\\n`np....</td>\n",
+       "      <td>module 'numpy' has no attribute 'float'.\\n`np....</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>36.528864</td>\n",
+       "      <td>2.561161</td>\n",
+       "      <td>5.122323</td>\n",
+       "      <td>36.528864</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>10.510941</td>\n",
+       "      <td>66.081527</td>\n",
+       "      <td>410.172939</td>\n",
+       "      <td>7.324517</td>\n",
+       "      <td>2317</td>\n",
+       "      <td>55</td>\n",
+       "      <td>158.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>12.444444</td>\n",
+       "      <td>6.611111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CHEMBL4167681</th>\n",
        "      <td>CCCCCCCCCCOc1cc(C(=O)NO)ccc1OC</td>\n",
        "      <td>890.0</td>\n",
-       "      <td>11.430997</td>\n",
-       "      <td>11.430997</td>\n",
-       "      <td>0.332615</td>\n",
-       "      <td>-0.565202</td>\n",
-       "      <td>0.341103</td>\n",
-       "      <td>10.391304</td>\n",
-       "      <td>323.433</td>\n",
-       "      <td>294.201</td>\n",
+       "      <td>module 'numpy' has no attribute 'float'.\\n`np....</td>\n",
+       "      <td>module 'numpy' has no attribute 'float'.\\n`np....</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29.000548</td>\n",
+       "      <td>2.338720</td>\n",
+       "      <td>4.677440</td>\n",
+       "      <td>29.000548</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
+       "      <td>9.490015</td>\n",
+       "      <td>55.747981</td>\n",
+       "      <td>323.209658</td>\n",
+       "      <td>6.215570</td>\n",
+       "      <td>1552</td>\n",
+       "      <td>29</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>8.194444</td>\n",
+       "      <td>5.722222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CHEMBL320658</th>\n",
        "      <td>COc1c(O)cc(O)c(C(=O)c2c(O)cc(O)cc2O)c1CC=C(C)C</td>\n",
        "      <td>14700.0</td>\n",
-       "      <td>12.945543</td>\n",
-       "      <td>12.945543</td>\n",
-       "      <td>0.001304</td>\n",
-       "      <td>-0.881522</td>\n",
-       "      <td>0.409566</td>\n",
-       "      <td>10.423077</td>\n",
-       "      <td>360.362</td>\n",
-       "      <td>340.202</td>\n",
+       "      <td>module 'numpy' has no attribute 'float'.\\n`np....</td>\n",
+       "      <td>module 'numpy' has no attribute 'float'.\\n`np....</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.785536</td>\n",
+       "      <td>2.487191</td>\n",
+       "      <td>4.974383</td>\n",
+       "      <td>30.785536</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>10.246190</td>\n",
+       "      <td>61.037956</td>\n",
+       "      <td>360.120903</td>\n",
+       "      <td>7.828715</td>\n",
+       "      <td>1541</td>\n",
+       "      <td>45</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>11.722222</td>\n",
+       "      <td>5.805556</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CHEMBL109045</th>\n",
        "      <td>COc1cc(C(=O)c2c(O)cc(O)c(CC=C(C)C)c2O)c(O)cc1O</td>\n",
        "      <td>66000.0</td>\n",
-       "      <td>12.775670</td>\n",
-       "      <td>12.775670</td>\n",
-       "      <td>0.061414</td>\n",
-       "      <td>-0.894213</td>\n",
-       "      <td>0.409566</td>\n",
-       "      <td>10.423077</td>\n",
-       "      <td>360.362</td>\n",
-       "      <td>340.202</td>\n",
+       "      <td>module 'numpy' has no attribute 'float'.\\n`np....</td>\n",
+       "      <td>module 'numpy' has no attribute 'float'.\\n`np....</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.937441</td>\n",
+       "      <td>2.472994</td>\n",
+       "      <td>4.945989</td>\n",
+       "      <td>30.937441</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>10.229729</td>\n",
+       "      <td>61.015219</td>\n",
+       "      <td>360.120903</td>\n",
+       "      <td>7.828715</td>\n",
+       "      <td>1626</td>\n",
+       "      <td>45</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>11.722222</td>\n",
+       "      <td>5.805556</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CHEMBL4464068</th>\n",
        "      <td>CCCCCCCCCCOc1cc(C(=O)NO)on1</td>\n",
        "      <td>360.0</td>\n",
-       "      <td>10.999545</td>\n",
-       "      <td>10.999545</td>\n",
-       "      <td>0.070904</td>\n",
-       "      <td>-0.736640</td>\n",
-       "      <td>0.369750</td>\n",
-       "      <td>10.500000</td>\n",
-       "      <td>284.356</td>\n",
-       "      <td>260.164</td>\n",
+       "      <td>module 'numpy' has no attribute 'float'.\\n`np....</td>\n",
+       "      <td>module 'numpy' has no attribute 'float'.\\n`np....</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25.146120</td>\n",
+       "      <td>2.304287</td>\n",
+       "      <td>4.429917</td>\n",
+       "      <td>25.146120</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
+       "      <td>9.136801</td>\n",
+       "      <td>65.204580</td>\n",
+       "      <td>284.173607</td>\n",
+       "      <td>6.458491</td>\n",
+       "      <td>1145</td>\n",
+       "      <td>21</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>6.833333</td>\n",
+       "      <td>4.944444</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 219 columns</p>\n",
+       "<p>5 rows × 1828 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 15
   },
   {
    "metadata": {
