--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-14T13:25:40.223043Z",
-     "start_time": "2025-07-14T13:25:40.165973Z"
+     "end_time": "2025-07-14T14:22:54.909497Z",
+     "start_time": "2025-07-14T14:22:52.044854Z"
     }
    },
    "source": [
@@ -15,9 +15,40 @@
     "\n",
     "predict(\n",
     "    smiles=\"COc1c(O)cc2oc3cc(O)c(CC=C(C)C)c(O)c3c(=O)c2c1CC=C(C)C\", \n",
-    "    model_name=\"catboost\" # model name, look for available models in resources (model_name.pkl)\n",
+    "    model_name=\"catboost_mordred\", # model name, look for available models in resources (model_name.pkl)\n",
+    "    desc_func_name=\"mordred\" # it should match descriptors in model name\n",
     ") # return pIC50"
    ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-4.206736495635632"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-14T14:23:24.248658Z",
+     "start_time": "2025-07-14T14:23:24.195873Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "predict(\n",
+    "    smiles=\"COc1c(O)cc2oc3cc(O)c(CC=C(C)C)c(O)c3c(=O)c2c1CC=C(C)C\", \n",
+    "    model_name=\"catboost_rdkit\",\n",
+    "    desc_func_name=\"rdkit\"\n",
+    ") # return pIC50"
+   ],
+   "id": "2dc7ebdf7b8eeb9c",
    "outputs": [
     {
      "data": {
@@ -31,6 +62,14 @@
     }
    ],
    "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "4891fea87dc747e2"
   }
  ],
  "metadata": {
