Fixed with black and isort

--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -1,29 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-14T14:22:54.909497Z",
-     "start_time": "2025-07-14T14:22:52.044854Z"
+     "end_time": "2025-07-15T09:48:20.396185Z",
+     "start_time": "2025-07-15T09:48:17.378583Z"
     }
    },
+   "cell_type": "code",
    "source": [
-    "from predictor.predict import predict\n",
+    "from predictor.predict import predict_rdkit_morgan\n",
     "\n",
-    "predict(\n",
-    "    smiles=\"COc1c(O)cc2oc3cc(O)c(CC=C(C)C)c(O)c3c(=O)c2c1CC=C(C)C\", \n",
-    "    model_name=\"catboost_mordred\", # model name, look for available models in resources (model_name.pkl)\n",
-    "    desc_func_name=\"mordred\" # it should match descriptors in model name\n",
-    ") # return pIC50"
+    "predict_rdkit_morgan(\n",
+    "    smiles=\"CN[C@@H]1C[C@H]2O[C@@](C)([C@@H]1OC)n1c3ccccc3c3c4c(c5c6ccccc6n2c5c31)C(=O)NC4\",\n",
+    "    model_name=\"catboost\",\n",
+    ")"
    ],
+   "id": "791eae8b4813098a",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-4.206736495635632"
+       "15.602742974455978"
       ]
      },
      "execution_count": 1,
@@ -32,44 +30,6 @@
     }
    ],
    "execution_count": 1
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-14T14:23:24.248658Z",
-     "start_time": "2025-07-14T14:23:24.195873Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "predict(\n",
-    "    smiles=\"COc1c(O)cc2oc3cc(O)c(CC=C(C)C)c(O)c3c(=O)c2c1CC=C(C)C\", \n",
-    "    model_name=\"catboost_rdkit\",\n",
-    "    desc_func_name=\"rdkit\"\n",
-    ") # return pIC50"
-   ],
-   "id": "2dc7ebdf7b8eeb9c",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-4.152364264118942"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 2
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "4891fea87dc747e2"
   }
  ],
  "metadata": {
