--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,9 +2,8 @@
  "cells": [
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-15T09:48:20.396185Z",
-     "start_time": "2025-07-15T09:48:17.378583Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "cell_type": "code",
@@ -12,24 +11,21 @@
     "from predictor.predict import predict_rdkit_morgan\n",
     "\n",
     "predict_rdkit_morgan(\n",
-    "    smiles=\"CN[C@@H]1C[C@H]2O[C@@](C)([C@@H]1OC)n1c3ccccc3c3c4c(c5c6ccccc6n2c5c31)C(=O)NC4\",\n",
+    "    smiles=\"COc1ccc(CNC(=O)Nc2ncc([N+](=O)[O-])s2)cc1\",\n",
     "    model_name=\"catboost\",\n",
     ")"
    ],
-   "id": "791eae8b4813098a",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15.602742974455978"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 1
+   "id": "234755d7d4fef4f",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "a3421491c9095a2"
   }
  ],
  "metadata": {
